--- a/src/autocorrectpoo/InstruccionesPanel.form
+++ b/src/autocorrectpoo/InstruccionesPanel.form
@@ -16,13 +16,45 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="instruccionesScrollPane" pref="488" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="instruccionesScrollPane" pref="348" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Container class="javax.swing.JScrollPane" name="instruccionesScrollPane">
+      <AuxValues>
+        <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+      </AuxValues>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JTextArea" name="instruccionesTextArea">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="15" style="0"/>
+            </Property>
+            <Property name="lineWrap" type="boolean" value="true"/>
+            <Property name="rows" type="int" value="5"/>
+            <Property name="text" type="java.lang.String" value="Esta aplicaci&#xf3;n tiene la siguiente funcionalidad:&#xa;&#xa;1.- Escribir archivos y especificar el autor desde un principio&#xa;2.- Escribir archivos sin autor&#xa;3.- Verificar la ortograf&#xed;a de dichos archivos&#xa;4.- Verificar la autor&#xed;a de un archivo eligiendo un autor o compar&#xe1;ndolo con todos los autores&#xa;&#xa;- Para escribir un archivo y especificar el autor, simplemente seleccione el autor y oprima el bot&#xf3;n &quot;Escribir&quot;.&#xa;- Para escribir un archivo sin autor, seleccione [sin autor]&quot; de la lista de autores.&#xa;- Para validar un archivo seleccione un archivo en la pesta&#xf1;a &quot;Validar&quot;, presione el bot&#xf3;n &quot;Validar&quot; y siga las instrucciones."/>
+            <Property name="wrapStyleWord" type="boolean" value="true"/>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
+  </SubComponents>
 </Form>
