Add buttons and change size

--- a/src/autocorrectpoo/AutoCorrectMainPanel.form
+++ b/src/autocorrectpoo/AutoCorrectMainPanel.form
@@ -20,19 +20,27 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="modificarButton" min="-2" pref="165" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="escribirButton" min="-2" pref="165" max="-2" attributes="0"/>
+                      <Component id="autoresLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="207" max="-2" attributes="0"/>
+                      <Component id="archivosLabel" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="autoresLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="autoresScrollPane" pref="207" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="autoresScrollPane" pref="275" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="archivosLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="archivosScrollPane" pref="273" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="modificarButton" min="-2" pref="141" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Component id="escribirButton" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="archivosScrollPane" pref="277" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -57,6 +65,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="modificarButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="escribirButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -112,6 +122,19 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Escribir"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Agregar Autor"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Eliminar Autor"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
