--- a/src/autocorrectpoo/AutoCorrectMainPanel.form
+++ b/src/autocorrectpoo/AutoCorrectMainPanel.form
@@ -122,6 +122,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Escribir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="escribirButtonClick"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
