--- a/src/autocorrectpoo/PanelEscritura.form
+++ b/src/autocorrectpoo/PanelEscritura.form
@@ -19,11 +19,13 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="textAreaScrollPane" alignment="0" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Component id="textAreaScrollPane" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
                       <Component id="corregirButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="147" max="32767" attributes="0"/>
-                      <Component id="guardarButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="guardarEnDiccionarioButton" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                      <Component id="guardarButton" min="-2" pref="139" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -34,11 +36,12 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="textAreaScrollPane" pref="553" max="32767" attributes="0"/>
+              <Component id="textAreaScrollPane" pref="558" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="corregirButton" pref="44" max="32767" attributes="0"/>
                   <Component id="guardarButton" max="32767" attributes="0"/>
+                  <Component id="guardarEnDiccionarioButton" alignment="0" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -79,6 +82,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="guardarButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="guardarEnDiccionarioButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Guardar en Diccionario"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="guardarEnDiccionarioButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
