--- a/src/autocorrectpoo/AutoCorrectMainPanel.form
+++ b/src/autocorrectpoo/AutoCorrectMainPanel.form
@@ -27,9 +27,9 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                              <Component id="agregarAutorButton" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                              <Component id="eliminarAutorButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="autoresScrollPane" pref="275" max="32767" attributes="0"/>
                       </Group>
@@ -65,8 +65,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="modificarButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="escribirButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="agregarAutorButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="eliminarAutorButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -126,17 +126,20 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="escribirButtonClick"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="agregarAutorButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Agregar Autor"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregarAutorButtonActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="eliminarAutorButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Eliminar Autor"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eliminarAutorButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
